# tartan

./: AUTHORS  HACKING  Makefile.am  README  configure.ac  meson.build  tartan.doap
clang-plugin/: assertion-extracter.cpp  checker.h  debug.cpp  gassert-attributes.cpp  gerror-checker.cpp  gerror-checker.h  gir-attributes.cpp  gsignal-checker.cpp  gvariant-checker.cpp  meson.build  nullability-checker.cpp  ownership-eval.cpp  ownership-eval.h  plugin.cpp  type-manager.cpp
m4/: tartan_code_coverage.m4
scripts/: meson.build  tartan  tartan-json
tests/: Makefile.am  assertion-extraction-cpp.cpp  assertion.tail.c  driver.py  gerror-api.c  gsignal-connect.c  gvariant-iter.c  gvariant-new.c  meson.build  wrapper-compiler-errors
